feat(profile): enhance profile caching and update service logic
- Introduced a new `ProfileCacheListener` to handle caching of profile changes.
- Refactored `RedisProfileCacheServiceImpl` to streamline cache key management.
- Updated `UserActivityProducer` to serialize events as JSON before sending to Kafka.
- Added integration tests for `RedisProfileCacheService` to validate cache lifecycle.
- Modified `ProfileSearchRepositoryImpl` to improve interest matching logic.
- Adjusted dependencies in `build.gradle.kts` for validation support.