@@ -3,21 +3,19 @@ package com.tinder.profile.repository;
 import com.tinder.profile.domain.Gender;
 import com.tinder.profile.dto.ProfileCandidateDto;
 import lombok.RequiredArgsConstructor;
+import org.bson.Document;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.aggregation.Aggregation;
-import org.springframework.data.mongodb.core.aggregation.AggregationExpression;
 import org.springframework.data.mongodb.core.aggregation.AggregationOperation;
-import org.springframework.data.mongodb.core.aggregation.ArithmeticOperators;
-import org.springframework.data.mongodb.core.aggregation.ArrayOperators;
 import org.springframework.data.mongodb.core.aggregation.GeoNearOperation;
-import org.springframework.data.mongodb.core.aggregation.SetOperators;
 import org.springframework.data.mongodb.core.geo.GeoJsonPoint;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.NearQuery;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
@@ -49,28 +47,35 @@ public class ProfileSearchRepositoryImpl implements ProfileSearchRepository {
 
         AggregationOperation match = Aggregation.match(matchCriteria);
 
-        List<String> safeInterests = userInterests == null ? List.of() : userInterests;
-        AggregationExpression sharedInterestsCount = ArrayOperators.Size.lengthOfArray(
-                SetOperators.SetIntersection.arrayAsSet("$interests")
-                        .intersects(safeInterests.toArray(new String[0]))
-        );
+        AggregationOperation normalizeInterests = context -> new Document("$addFields",
+                new Document("interestsSafe", new Document("$ifNull", List.of("$interests", Collections.emptyList()))));
 
-        AggregationExpression scoreFormula = ArithmeticOperators.Subtract.valueOf(
-                ArithmeticOperators.Multiply.valueOf(sharedInterestsCount).multiplyBy(10)
-        ).subtract(
-                ArithmeticOperators.Divide.valueOf("$calculatedDistance").divideBy(2000)
-        );
+        List<String> safeSearcherInterests = userInterests == null ? List.of() : userInterests;
 
-        AggregationOperation addFields = Aggregation.addFields()
-                .addField("matchScore").withValueOf(scoreFormula)
-                .build();
+        AggregationOperation addScore = context -> {
+            Document distancePenalty = new Document("$divide", List.of("$calculatedDistance", 2000));
+            Document matchScore;
+            if (safeSearcherInterests.isEmpty()) {
+                matchScore = new Document("$subtract", List.of(0, distancePenalty));
+            } else {
+                Document intersection = new Document("$setIntersection",
+                        List.of("$interestsSafe", safeSearcherInterests));
+                Document sharedCount = new Document("$size",
+                        new Document("$ifNull", List.of(intersection, Collections.emptyList())));
+                Document interestBoost = new Document("$multiply", List.of(sharedCount, 10));
+                matchScore = new Document("$subtract", List.of(interestBoost, distancePenalty));
+            }
+            return new Document("$addFields", new Document("matchScore", matchScore));
+        };
 
         AggregationOperation sort = Aggregation.sort(Sort.by(Sort.Direction.DESC, "matchScore"));
         AggregationOperation limitOp = Aggregation.limit(limit);
 
         AggregationOperation project = Aggregation.project("userId");
 
-        Aggregation aggregation = Aggregation.newAggregation(geoNear, match, addFields, sort, limitOp, project);
+        Aggregation aggregation = Aggregation.newAggregation(
+                geoNear, match, normalizeInterests, addScore, sort, limitOp, project
+        );
 
         return mongoTemplate.aggregate(aggregation, "profiles", ProfileCandidateDto.class).getMappedResults();
     }
